<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Homestay Booking</string>
    <string name="ok">OK</string>
    <string name="dialogMessageNotInstallGoogleChrome">Please download Google Chrome browser to view the page</string>
    <string name="acb">ACB</string>
    <string name="acc_label_card_number">Card number</string>
    <string name="acc_label_expiry_date">Expiration date</string>
    <string-array name="main_tab_title">
        <item>Khám phá</item>
        <item>Ưa thích</item>
        <item>Đặt phòng</item>
        <item>Inbox</item>
        <item>Tài khoản</item>
    </string-array>
    <string name="paymentHost">payment</string>
    <string-array name="linkTypes">
        <item>@string/paymentHost</item>
    </string-array>
    <string name="dialog_bad_request_message">400 Bad Request</string>
    <string name="dialog_unauthorized_message">401 Unauthorized</string>
    <string name="dialog_forbidden_message">403 Forbidden</string>
    <string name="dialog_not_found_message">404 Not Found</string>
    <string name="dialog_internal_error">500 Internal Error</string>
    <string name="dialog_client_time_out_message">408 Request Timeout</string>
    <string name="dialog_unavailable_message">503 Service Unavailable</string>
    <string name="dialog_server_error_message">Server error：%s</string>
    <string name="dialog_no_internet_message">No connection!</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="currency_usd_option">&lt;b>&lt;font color=#000000>USD&lt;/font>&lt;/b>\u0009\u0009&lt;b>&lt;font color=#6B6A6A>Dollar USA&lt;/font>&lt;/b></string>
    <string name="currency_vnd_option">&lt;b>&lt;font color=#000000>VND&lt;/font>&lt;/b>\u0009\u0009&lt;b>&lt;font color=#6B6A6A>Việt Nam Đồng&lt;/font>&lt;/b></string>
    <string name="dd_mm_yyyy_format">%1$d/%2$d/%3$d</string>
    <string name="default_notification_channel_id">100</string>
    <string name="define_roundedimageview" />
    <string name="digits_number">1234567890</string>
    <string name="dot_important">*</string>
    <string name="ending_in">" ending in "</string>
    <string name="err_common_not_installed">ZaloPay application chưa được cài đặt!</string>
    <string name="err_link_merchant_requestid">RequestId không được để rỗng</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expiry_date_hint">MM/YY</string>
    <string name="expiry_label_short">Expiry</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_id">536476913212966</string>
    <string name="fastscroll__app_name">RecyclerViewFastScroll</string>
    <string name="fb_login_protocol_scheme">fb555874404747683</string>
    <string name="hh_mm_format">%1$s:%2$s</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hiden_text">"●●●●   ●●●●   ●●●●   "</string>
    <string name="invalid_card_number">"Your card's number is invalid."</string>
    <string name="invalid_cvc">"Your card's security code is invalid."</string>
    <string name="invalid_expiry_month">"Your card's expiration month is invalid."</string>
    <string name="invalid_expiry_year">"Your card's expiration year is invalid."</string>
    <string name="invalid_number">Sorry the number is invalid</string>
    <string name="invalid_shipping_information">Invalid Shipping Address</string>
    <string name="invalid_zip">Your postal code is incomplete.</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="linearLayoutManager">androidx.recyclerview.widget.LinearLayoutManager</string>
    <string name="business_payment">Hotel Booking Business</string>
    <string name="credit">Used credit</string>
    <string name="for_business">Hotel Booking For Business</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="moe_inbox_name">Notification Center</string>
    <string name="moe_message_to_register">Device could not be registered. Click on the button to retry.</string>
    <string name="moe_message_to_unregister">Device is registered for Integration verification. Click on the button to un-register</string>
    <string name="moe_notification_center_empty">Notification Center Empty</string>
    <string name="moe_register">REGISTER</string>
    <string name="moe_unregister">UNREGISTER</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="mtrl_slider_range_content_description">%1$s to %2$s</string>
    <string name="no_payment_methods">No payment methods.</string>
    <string name="no_result_found">Results not found</string>
    <string name="notification_work_profile_content_description">Work profile</string>
    <string name="num_credit">%1$s Credit</string>
    <string name="only_text">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="error001">This input is must not empty.</string>
    <string name="acc_type_header">Chỗ ở của bạn là</string>
    <string name="address_detail_header">Địa chỉ chi tiết</string>
    <string name="bath_room_header">Phòng tắm</string>
    <string name="bed_number_title">Số lượng giường ngủ</string>
    <string name="bed_room_number">Số lượng phòng ngủ</string>
    <string name="booking_type_header">Loại đặt chỗ</string>
    <string name="district_header">Quận/Huyện</string>
    <string name="introduction_info_title">Giới thiệu chung</string>
    <string name="introduction_title">Chia sẻ với khách hàng một vài thông tin ngắn gọn và nổi bật về chỗ nghỉ này của bạn.</string>
    <string name="listing_address_header">Địa chỉ, vị trí</string>
    <string name="listing_address_title">Vui lòng chia sẻ chi tiết về vị trí chỗ nghỉ của bạn.</string>
    <string name="name_listing_header">Tên chỗ ở</string>
    <string name="province_header">Tỉnh/Thành Phố</string>
    <string name="room_detail_header">Chi tiết phòng</string>
    <string name="room_detail_title">Vui lòng chia sẻ chi tiết về vị trí chỗ nghỉ của bạn.</string>
    <string name="square_header">Diện tích chỗ nghỉ (m2)</string>
    <string name="standard_guests">Số lượng khách</string>
    <string name="stress_header">Đường</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don`t have an account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="hint_enter_your_email">Enter your email</string>
    <string name="error_email_is_not_valid">Email is not valid</string>
    <string name="email">Email</string>
    <string name="error_password">Password must have minimum 8 characters, at least one uppercase letter, one lowercase letter and one number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_password_againt">Please enter password against.</string>
    <string name="error_two_password_must_be_same">Password not match</string>
    <string name="sign_up">Sign Up</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
</resources>