<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/headerBarHeight">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/style_title_action_bar"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/login" />

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/headerBarHeight"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_back_white"
                android:tint="@color/colorAccent"
                android:visibility="visible" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbarLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingBottom="54dp">

            <com.ctr.homestaybooking.ui.wedget.InputGroupLayout
                android:id="@+id/inputFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:visibility="gone"
                app:edit_hint="Enter first name"
                app:error_textOnEmpty="@string/error001"
                app:label_text="First name" />

            <com.ctr.homestaybooking.ui.wedget.InputGroupLayout
                android:id="@+id/inputLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputFirstName"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:visibility="gone"
                app:edit_hint="Enter last name"
                app:error_textOnEmpty="@string/error001"
                app:label_text="Last name" />

            <com.ctr.homestaybooking.ui.wedget.InputGroupLayout
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputLastName"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:visibility="gone"
                app:edit_hint="Enter phone number"
                app:edit_inputType="phone"
                app:error_text="Phone number is not valid"
                app:error_textOnEmpty="@string/error001"
                app:label_text="Phone" />

            <com.ctr.homestaybooking.ui.wedget.InputGroupLayout
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputPhone"
                android:layout_marginTop="@dimen/dimen_24dp"
                app:edit_hint="@string/hint_enter_your_email"
                app:edit_maxLength="255"
                app:error_text="@string/error_email_is_not_valid"
                app:error_textOnEmpty="@string/error001"
                app:label_text="@string/email" />

            <com.ctr.homestaybooking.ui.wedget.InputGroupLayout
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputEmail"
                android:layout_marginTop="@dimen/dimen_24dp"
                app:edit_hint="@string/hint_enter_password"
                app:edit_inputType="textPassword"
                app:edit_maxLength="50"
                app:error_text="@string/error_password"
                app:error_textOnEmpty="@string/error001"
                app:label_text="@string/password" />

            <com.ctr.homestaybooking.ui.wedget.InputGroupLayout
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputPassword"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:visibility="gone"
                app:edit_hint="Confirm your password"
                app:edit_inputType="textPassword"
                app:edit_maxLength="50"
                app:error_text="Password does not match !"
                app:error_textOnEmpty="@string/error001"
                app:label_text="Confirm Password" />

            <Button
                android:id="@+id/tvLogin"
                style="@style/AppButton"
                android:layout_width="200dp"
                android:layout_height="@dimen/dimen_48dp"
                android:layout_above="@+id/tvAlready"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:background="@drawable/bg_button_round_gradient_enable"
                android:text="@string/login"
                android:textColor="#ffffffff" />

            <TextView
                android:id="@+id/tvAlready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tvActionHere"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dimen_12dp"
                android:fontFamily="@font/lato_black"
                android:text="@string/dont_have_an_account"
                android:textColor="#ff666666"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvActionHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dimen_30dp"
                android:fontFamily="@font/lato_black"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
