<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/headerBarHeight">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/style_title_action_bar"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/sign_up" />

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/headerBarHeight"
                android:paddingStart="24dp"
                android:paddingEnd="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_back_white"
                android:tint="@color/colorAccent"
                android:visibility="visible" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbarLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingBottom="54dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAvatar"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:elevation="16dp"
                app:cardCornerRadius="70dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/default_avatar" />
            </androidx.cardview.widget.CardView>

            <com.ctr.homestaybooking.ui.wedget.InputGroupLayout
                android:id="@+id/inputFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cvAvatar"
                android:layout_marginTop="@dimen/dimen_24dp"
                app:error_textOnEmpty="@string/error001"
                app:label_text="@string/first_name" />

            <com.ctr.homestaybooking.ui.wedget.InputGroupLayout
                android:id="@+id/inputLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputFirstName"
                android:layout_marginTop="@dimen/dimen_24dp"
                app:error_textOnEmpty="@string/error001"
                app:label_text="@string/last_name" />

            <com.ctr.homestaybooking.ui.wedget.InputGroupLayout
                android:id="@+id/inputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputLastName"
                android:layout_marginTop="@dimen/dimen_24dp"
                app:edit_inputType="phone"
                app:error_text="Phone number is not valid"
                app:error_textOnEmpty="@string/error001"
                app:label_text="@string/phone_number" />

            <com.ctr.homestaybooking.ui.wedget.InputGroupLayout
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputPhone"
                android:layout_marginTop="@dimen/dimen_24dp"
                app:edit_maxLength="255"
                app:error_text="Email is not valid"
                app:error_textOnEmpty="@string/error001"
                app:label_text="Email" />

            <com.ctr.homestaybooking.ui.wedget.InputGroupLayout
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputEmail"
                android:layout_marginTop="@dimen/dimen_24dp"
                app:edit_inputType="textPassword"
                app:edit_maxLength="50"
                app:error_text="@string/error_password"
                app:error_textOnEmpty="@string/error001"
                app:label_text="Mật khẩu" />

            <com.ctr.homestaybooking.ui.wedget.InputGroupLayout
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputPassword"
                android:layout_marginTop="@dimen/dimen_24dp"
                app:edit_inputType="textPassword"
                app:edit_maxLength="50"
                app:error_text="@string/error_two_password_must_be_same"
                app:error_textOnEmpty="@string/error001"
                app:label_text="@string/enter_password_againt" />

            <Button
                android:id="@+id/tvSignUp"
                style="@style/AppButton"
                android:layout_width="200dp"
                android:layout_height="@dimen/dimen_48dp"
                android:layout_below="@id/inputEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:background="@drawable/bg_button_round_gradient_enable"
                android:text="Đăng kí"
                android:textColor="#ffffffff" />

            <TextView
                android:id="@+id/tvAlready"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSignUp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:fontFamily="@font/lato_black"
                android:text="@string/do_you_have_an_account"
                android:textColor="#ff666666"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvActionHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAlready"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:fontFamily="@font/lato_black"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
